Fixed layout issue in vault pane

--- a/web/src/css/base/vault.css
+++ b/web/src/css/base/vault.css
@@ -29,7 +29,7 @@
 #txtVaultTreeViewSearch {
     grid-column: 2;
     grid-row: 1;
-    width: 100%;
+    width: auto;
 }
 
 #lblVaultTreeViewSearchType {
